tests/tests/legacy_kustomizations/webhook/test_data/expected/~g_v1_configmap_admission-webhook-admission-webhook-parameters.yaml
apiVersion: v1
data:
  namespace: kubeflow
kind: ConfigMap
metadata:
  annotations: {}
  labels:
    app: admission-webhook
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: webhook-v1.0.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: webhook
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v1.0.0
    kustomize.component: admission-webhook
  name: admission-webhook-admission-webhook-parameters
  namespace: kubeflow
