tests/tests/legacy_kustomizations/webhook/test_data/expected/~g_v1_serviceaccount_admission-webhook-service-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app: admission-webhook
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: webhook-v1.0.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: webhook
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v1.0.0
    kustomize.component: admission-webhook
  name: admission-webhook-service-account
  namespace: kubeflow
